core,scripting: added extensible template resolvers, added 'js:' template resolver